<resources>

    <!-- App & Activity Strings -->
    <string name="app_name">Lens Launcher</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_arranger">Order &amp; Visibility</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_apps">Apps</string>

    <!-- Tab Strings -->
    <string name="tab_lens">Lens</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_settings">Settings</string>

    <!-- Settings Strings -->
    <string name="setting_lens_diameter">Lens Diameter</string>
    <string name="setting_min_icon_size">Icon Size</string>
    <string name="setting_distortion_factor">Distortion Factor</string>
    <string name="setting_scale_factor">Scale Factor</string>
    <string name="setting_animation_time">Animation Time</string>
    <string name="setting_vibrate_app_hover">Vibrate on App Hover</string>
    <string name="setting_vibrate_app_launch">Vibrate on App Launch</string>
    <string name="setting_show_name_app_hover">Show Name on App Hover</string>
    <string name="setting_show_touch_selection">Show Touch Selection</string>
    <string name="setting_show_new_app_tag">Show New App Tag</string>
    <string name="setting_background_color">Background Color</string>
    <string name="setting_highlight_color">Highlight Color</string>
    <string name="setting_icon_pack">Icon Pack</string>
    <string name="setting_home_launcher">Home Launcher</string>
    <string name="setting_night_mode">Night Mode Theme</string>
    <string name="setting_background">Background</string>
    <string name="setting_default_icon_pack">Default Icon Pack</string>
    <string name="setting_default_sort_selected">@string/setting_sort_type_label_ascending</string>
    <string name="setting_sort_type_label_ascending">App Name (Ascending)</string>
    <string name="setting_sort_type_label_descending">App Name (Descending)</string>
    <string name="setting_sort_type_install_date_ascending">Newest First</string>
    <string name="setting_sort_type_install_date_descending">Oldest First</string>
    <string name="setting_sort_type_open_count_ascending">Most Opened</string>
    <string name="setting_sort_type_open_count_descending">Least Opened</string>
    <string name="setting_sort_type_icon_color_ascending">Icon Color (Light to Dark)</string>
    <string name="setting_sort_type_icon_color_descending">Icon Color (Dark to Light)</string>
    <string name="setting_app_arranger">@string/activity_title_arranger</string>
    <string name="setting_sort_apps">App Order</string>

    <!-- Menu Strings -->
    <string name="menu_title_about">About</string>
    <string name="menu_title_reset_defaults">Reset Default Settings</string>
    <string name="menu_title_change_home_launcher">Change Home Launcher</string>
    <string name="menu_title_show_apps">Show Apps</string>
    <string name="menu_app_open"><b>Open</b></string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_app_uninstall">Uninstall</string>

    <!-- Error Strings -->
    <string name="error_app_not_found">App Not Found</string>
    <string name="error_too_many_apps">Failed to Load Apps</string>

    <!-- Progress Strings -->
    <string name="progress_loading_apps">Loading Apps</string>
    <string name="progress_loading_icons">Loading Icons</string>

    <!-- Feedback Strings -->
    <string name="snackbar_reset_successful">Values Reset To Default</string>

    <!-- About Strings -->
    <string name="about"><![CDATA[Lens Launcher is a unique, efficient way to browse and launch your apps.<br><br>Instead of scrolling long lists or swiping through multiple pages, Lens Launcher implements two unique features:<br><br><b>• An Equispaced Grid that displays all of your apps, regardless of screen size or app count.<br><br>• A Graphical Fisheye Lens to quickly zoom, pan and launch apps using touch gestures.</b><br><br>Lens Launcher also includes a full Settings menu to tweak all aspects of the Lens; Distortion, Scaling, Icon Size, Haptic Feedback, etc.<br><br>The Graphical Fisheye Lens algorithm is derived from methods proposed by Manojit Sarkar and Marc H. Brown. Their original 1993 paper, titled <i>Graphical Fisheye Views</i>, can be found <a href="https://drive.google.com/file/d/0B6Nqy9y098RLa2pqNVFUcUhIZXM/view?usp=sharing">here</a>.<br><br>Lens Launcher is written by Nick Rout<br><a href="https://twitter.com/ricknout">Twitter</a> | <a href="https://plus.google.com/+NicholasRout">Google+</a><br><br>Major contributions have been made by Rish Bhardwaj<br><a href="http://rish.pythonanywhere.com/home">Website</a> | <a href="http://www.linkedin.com/in/bhardwajrish/">LinkedIn</a><br><br>The source code and resources are available on <a href="https://github.com/nicholasrout/lens-launcher">Github</a><br><br>Check out <b>ShortStories</b> by Nick Rout. Interactive stories told through App Shortcuts and Notifications.<br><a href="https://play.google.com/store/apps/details?id=com.nickrout.shortstories">Get it on Google Play</a>]]></string>
    <string name="title_activity_main">MainActivity</string>

    <!-- PRO strings -->
    <string name="pro">PRO</string>
    <string name="get_pro">Get Lens Launcher PRO</string>

</resources>
